--- a/src/main/resources/templates/house/list.html
+++ b/src/main/resources/templates/house/list.html
@@ -226,7 +226,10 @@
     </div>
 </div>
 
-
+<!--删除房源-->
+<form method="post" id="delForm" >
+    <input type="hidden" name="_method" value="delete">
+</form>
 
 <script th:src="@{/lib/js/jquery/jquery.min.js}" type="text/javascript"></script>
 <script th:src="@{/lib/bootstrap/js/bootstrap.min.js}" type="text/javascript"></script>
@@ -319,7 +322,8 @@
                         }},
                     {title:'操作',formatter:function (value,row,index) {
                         let updateBtn="<button id='updateBtn' class='btn btn-primary' type='button' data-toggle='modal' data-target='#myModal'>更新</button>"
-                            return updateBtn
+                            let deleteBtn="<button id='deleteBtn' class='btn btn-danger'type='button' >删除</button>"
+                            return updateBtn+" | "+deleteBtn
                         },
                         events:houseEvent
 
@@ -430,6 +434,14 @@
                     House.queryArea('update_area',this.value)
                 }
             })
+        },
+        'click #deleteBtn': function (event,value,row,index) {
+            //请求iu地址:/boot/house/1  delete
+            let action = path + "/house/" + row.id
+            if(confirm("确认删除?")) {
+
+                $('#delForm').attr("action", action).submit()
+            }
         }
     }
 </script>
